--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
 body {
-    background-color: beige;
+    font-family: sans-serif;
+}
+h1 {
+    color: cornflowerblue;
+    transition:color 1s ease-in-out ;
+}
+.clicked {
+    color: tomato;
 }
